CICO-34733 - Style update

--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -3461,6 +3461,12 @@
             .groups {
                 .calc-height( 100, 118 );
                 position: relative;
+
+                .group {
+                    &:last-child {
+                        border-bottom: 1px solid @grey2;
+                    }
+                }
             }
 
             .group-info {
