CICO-34733 Made the details section show only where there are results from api

--- a/rover/partials/reports/groupRoomsReport/rvGroupRoomsReport.html
+++ b/rover/partials/reports/groupRoomsReport/rvGroupRoomsReport.html
@@ -7,7 +7,7 @@
 </div>
 <!-- Report content -->
 <!-- add .with-pagination if has pagination -->
-<div id="report-content" class="report-content group-rooms" ng-controller="RVGroupRoomsReportController" ng-class="{'with-pagination' : totalCount > paginationConfig.perPage}">
+<div id="report-content" class="report-content group-rooms" ng-controller="RVGroupRoomsReportController" ng-class="{'with-pagination' : totalCount > paginationConfig.perPage}" ng-hide="hasNoResults">
     <div ng-include="'/assets/partials/reports/groupRoomsReport/rvGroupRoomsReportSummarySection.html'"></div>
     <!-- Vertical Slider -->
     <div class="groups scrollable" ng-iscroll="group-rooms-scroll">
