CICO-39194 fixed the alignment issue

--- a/guestweb/checkin/partials/Huntley/gwCheckinCCAddition.html
+++ b/guestweb/checkin/partials/Huntley/gwCheckinCCAddition.html
@@ -26,9 +26,9 @@
 
             <div class="row">
                 
-                <div class="col-xs-3 col-center-block">
+                <div class="col-center-block">
                     <button class="checkin-button continue-button blue-bg" ng-click="nextButtonClicked()">
-                            <span class="continue-text white-text">Continue</span>
+                            <span class="cc-continue continue-text white-text">Continue</span>
                         </button>
                 </div>
             </div>
