--- a/guestweb/css/less/huntley.less
+++ b/guestweb/css/less/huntley.less
@@ -326,6 +326,9 @@ border-bottom:1px solid;
     float: none;
     display: block;
     margin: 0 auto;
-    /* margin-left: auto; margin-right: auto; */
+    width: 250px;
+}
+.cc-continue{
+	margin: 0 auto !important;
 }
 /* Checkin CC Adding Styles*/
