--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -282,5 +282,16 @@ is_ledger
   <td></td>
 </tr>
 
+<tr class="charge-group" ng-repeat="item in ledgerTotalClosingBalance track by $index"  ng-show="ledgerTotalClosingBalance.length > 0">
+  <td class="code long-code break"><strong>{{item.section}}</strong></td>
+  <td class="break" > <strong ng-class="{ 'red': item.today < 0 }"> {{item.today | currency:currencySymbol:2}} </strong></td>
+  <td></td>
+  <td></td>
+  <td class="break"></td>
+  <td></td>
+  <td></td>
+  <td></td>
+</tr>
+
 
 
