CICO-39133 updated the alignment issue

--- a/guestweb/common_css/style.less
+++ b/guestweb/common_css/style.less
@@ -215,6 +215,7 @@ a{
 .late-checkout-final-button{
     font-size:16px;
     text-transform:uppercase;
+    line-height: 60px !important;
 }
 /*-------------------------------- responsive code starts here------------------------------*/
 
