CICO-34733 - Style update

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2928,10 +2928,11 @@
                 
             }
 
-            .group-data {
-                display: flex;
+            .group-data { 
+                .float;
 
                 ul {
+                    .pull-left();
                     width: 75px; 
 
                     .main-heading {
@@ -2978,6 +2979,8 @@
                 }
 
                 table {
+                    .pull-left();
+                    clear: none;
                     .calc-width(100, 75);
                 }
 
