--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -3509,9 +3509,10 @@
             }
 
             .group-data {
-                display: flex;
+                .float
 
                 ul {
+                    .pull-left();
                     width: 75px;
                     background: @white;
 
@@ -3581,6 +3582,8 @@
                 }
 
                 table {
+                    .pull-left();
+                    clear:none;
                     .calc-width(100, 75);
                 }
 
