CICO-34733 - Style update

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2932,7 +2932,7 @@
                 .float;
 
                 ul {
-                    .pull-left();
+                    .pull-left;
                     width: 75px; 
 
                     .main-heading {
@@ -2979,7 +2979,7 @@
                 }
 
                 table {
-                    .pull-left();
+                    .pull-left;
                     clear: none;
                     .calc-width(100, 75);
                 }
