--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -3509,10 +3509,10 @@
             }
 
             .group-data {
-                .float
+                .float;
 
                 ul {
-                    .pull-left();
+                    .pull-left;
                     width: 75px;
                     background: @white;
 
@@ -3582,7 +3582,7 @@
                 }
 
                 table {
-                    .pull-left();
+                    .pull-left;
                     clear:none;
                     .calc-width(100, 75);
                 }
