CICO-38430 add-on quantity fix

--- a/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
@@ -41,7 +41,7 @@
                     <p class="sub-main-text">{{addonSelectQty}}</p>
                     <div class="row">
                         <div class="select-style addon-numbers">
-                            <select ng-model="selectedAddon.quantity">
+                            <select ng-model="selectedAddonQuantity">
                                 <option value="">select</option>
                                 <option value="{{i}}" ng-repeat="i in quantityList">{{i}}</option>
                             </select>
