--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -30,18 +30,18 @@
     <!-- main content -->
     <div class="row" ng-hide="isLoading || netWorkError">
         <!-- detailed view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'DETAILED_VIEW'">
-            <p class="sub-main-text no-text-case bold-text" ng-bind="addonPurchaseMsgForDisplay"></p>
-            <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
+        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none addon-section-container" ng-show="mode === 'DETAILED_VIEW'">
+            <img ng-src="{{selectedAddon.image_original}}" class="content-image  margin-top-20" alt="">
+            <p class="main-text no-text-case bold-text margin-top-20" ng-bind="addonPurchaseMsgForDisplay" ng-hide="showPurchaseStatus"></p>
             <div ng-hide="showPurchaseStatus" class="addon-details">
-                <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}&nbsp;{{selectedAddon.suffix}}</p>
+                <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.amount}} <span ng-show="upsellDisplayOrderAmountFirst">{{selectedAddon.amount_type}}&nbsp;{{selectedAddon.post_type}}&nbsp;</span><span ng-hide="upsellDisplayOrderAmountFirst">{{selectedAddon.post_type}}&nbsp;{{selectedAddon.amount_type}}&nbsp;</span><span ng-show="selectedAddon.display_suffix">{{selectedAddon.suffix_label}}</span></p>
                 <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
                 <br/>
-                <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
+                <div ng-show="isAddonFlatOrRoomType(selectedAddon)">
                     <p class="sub-main-text">{{addonSelectQty}}</p>
                     <div class="row">
                         <div class="select-style addon-numbers">
-                            <select ng-model="selectedAddon.quantity">
+                            <select ng-model="selectedAddonQuantity">
                                 <option value="">select</option>
                                 <option value="{{i}}" ng-repeat="i in quantityList">{{i}}</option>
                             </select>
@@ -50,7 +50,7 @@
                 </div>
                 <!-- submit -->
                 <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-hide="hideAddAddonButton()">{{addonPurchase}}</a>
-                <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-show="hideAddAddonButton()">{{addonRemove}}</a>
+                <a class="btn btn-template margin-top-20" ng-click="removeAddon()" ng-show="hideAddAddonButton()">{{addonRemove}}</a>
                 <div class="row no-thanks-wrap margin-top-20">
                     <p class="centeralign no-thanks">
                         <a ng-click="noThanksClicked()" class="sub-text no-text-case">{{addonSkip}}</a>
@@ -58,24 +58,25 @@
                 </div>
             </div>
             <div ng-show="showPurchaseStatus" class="margin-bottom-10">
+                <p class="main-text no-text-case bold-text margin-top-20" ng-bind="selectedAddon.title"></p>
                 <p class="sub-main-text no-text-case margin-top-20">{{purchaseStatusText}}</p>
                 <a class="btn btn-template margin-top-80 margin-bottom-10" ng-click="doneClicked()">Done</a>
             </div>
         </div>
         <!-- List view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
-            <p class="main-text no-text-case margin-top-20">{{addonListTitle}}</p>
+        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none addon-section-container" ng-show="mode === 'LIST_VIEW'">
+            <p class="main-text no-text-case">{{addonListTitle}}</p>
             <p class="sub-main-text no-text-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
             <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
                 <div class="content-image">
                     <img ng-src="{{addon.image}}" alt="" width="100%" height="auto">
                 </div>
                 <div class="content-desc">
-                    <p class="sub-text no-text-case margin-top-10">{{addon.title | limitTo: 25 }}{{addon.title.length > 25? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-                    <p class="sub-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
+                    <p class="sub-main-text no-text-case margin-top-10">{{addon.name | limitTo: 50 }}{{addon.name.length > 50? '...' : ''}}<span ng-show="isAddonFlatOrRoomType(addon) && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
+                    <p class="sub-main-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.amount}} <span ng-show="upsellDisplayOrderAmountFirst">{{addon.amount_type}}&nbsp;{{addon.post_type}}&nbsp;</span><span ng-hide="upsellDisplayOrderAmountFirst">{{addon.post_type}}&nbsp;{{addon.amount_type}}&nbsp;</span>&nbsp;<span ng-show="addon.display_suffix">{{addon.suffix_label}}</span></p>
                 </div>
             </div>
-            <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">{{addonContinue}}</a>
+            <a class="btn btn-template margin-top-20" ng-click="noThanksClicked()">{{addonContinue}}</a>
             <div class="row no-thanks-wrap margin-top-20">
                 <p class="centeralign no-thanks">
                     <a ng-click="noThanksClicked()" class="sub-text no-text-case">{{addonSkip}}</a>
