CICO-38193 adding controller and src

--- a/admin/partials/zestStation/adZestStationAddons.html
+++ b/admin/partials/zestStation/adZestStationAddons.html
@@ -26,7 +26,7 @@
                         {{addon.post_type}}
                     </td>
                     <td data-title="'Offer'" header-class="width-20">
-                        <ad-toggle-button is-checked="addon.zest_web_active" label=""></ad-toggle-button>
+                        <ad-toggle-button is-checked="addon.zest_station_active" label=""></ad-toggle-button>
                     </td>
                 </tr>
             </tbody>
