CICO-39843 Label Changes in M3 Configuration page

--- a/admin/partials/interfaces/M3BackOffice/ADM3Configuration.html
+++ b/admin/partials/interfaces/M3BackOffice/ADM3Configuration.html
@@ -53,14 +53,14 @@
             <fieldset class="holder full-width">
                 <div class="form-title">
                     <h3>
-                        <span>Report Types</span>
+                        <span>Data Type</span>
                     </h3>
                     <em class="status">
-                        <span>Select at least one report type</span>
+                        <span>Select at least one data type</span>
                     </em>
                 </div>
                 <div class="entry has-sortable">
-                    <label class="center_align"><em class="rate_roomtype_text">Available Report Types</em></label>
+                    <label class="center_align"><em class="rate_roomtype_text">Available Data Types</em></label>
 
                     <ul class="boxes sortable ui-sortable short-list" data-type="source" data-drop="true"
                         ng-model="m3Accounting.available_reports" style="overflow-y: scroll !important;"
@@ -116,7 +116,7 @@
             </div>
                 <div class="entry has-sortable">
                     <label class="center_align">
-                        <span class="assigned_room_text">Selected Report Types</span></label>
+                        <span class="assigned_room_text">Selected Data Types</span></label>
                     <ul class="boxes sortable ui-sortable short-list"
                         data-type="target"
                         data-drop="true"
