CICO-38994: Navigation from rate types & rates and expansion in room types

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -2,7 +2,7 @@
     <ul class="info">
         <!-- show .back if we are looking at a single rate with room rates -->
         <li class="back" ng-show="showBackButton" ng-click='clickedOnBackButton()'>
-            <a class="back-button">Back</a>
+            <a class="back-button">{{backButtonText}}</a>
         </li>
          
 
