CICO-39130 added the CICO/email templates for gold strike

--- a/guestweb/common_css/gold_strike/theme.less
+++ b/guestweb/common_css/gold_strike/theme.less
@@ -6,6 +6,10 @@ body{
 .back-text{
     color:#fff !important;
 }
+.back-to-checkout {
+    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
+    height: 40px;
+}
 a,a:hover,.main-text,
 .res-date,
 .footer-sub-text,.footer-sub-text:hover,.phone-label{
@@ -15,7 +19,7 @@ a,a:hover,.main-text,
     color:#000;
 }
 .header-bar{
-    background:#355E9F;
+    background:#ffffff;
 }
 .logo-image {
        margin: 0% auto;
@@ -34,26 +38,26 @@ a,a:hover,.main-text,
     color: #000 !important;
 }
 .btn,.btn:hover{
-    background:#579FD9;
+    background:#DFA808;
     color:@white;
 }
 .dark-button,.dark-button:hover{
-    background: #3D88C4 ;
+    background: #CD9901 ;
 }
 .light-button,.light-button:hover{
-    background: #579FD9;
+    background: #DFA808;
 }
 .checkouttime1,.checkouttime1:hover{
-    background: #6DB0E6;
+    background: #EDB510;
 }
 .checkouttime2,.checkouttime2:hover{
-    background: #579FD9;
+    background: #DFA808;
 }
 .checkouttime3,.checkouttime3:hover{
-    background:#3D88C4;
+    background:#CD9901;
 }
 .no-thanks,.no-thanks:hover{
-    color:#3D88C4 !important;
+    color:#CD9901 !important;
     text-decoration: underline;
     text-transform:none;
 }
@@ -66,14 +70,14 @@ a,a:hover,.main-text,
 }
 
 .upgrade-details .upgrades-btn {
-    background: #6DB0E6;
+    background: #EDB510;
 }
 
 .proceed-to-checkin {
-      background: #6DB0E6;
+      background: #EDB510;
 }
 .upgrades-label{
-    color:#6DB0E6;
+    color:#EDB510;
 }
 .table > thead + tbody {
     border-top: 10px solid #f6f6f6!important;
@@ -95,14 +99,14 @@ a,a:hover,.main-text,
   color: #000 !important;
 }
 .pickadate-centered-heading{
-  color:#6DB0E6;
+  color:#EDB510;
 }
 .pickadate-cell .pickadate-active {
-  background-color: #6DB0E6 !important;
+  background-color: #EDB510 !important;
   color:#fff !important;
 }
 .pickadate-head{
-    color:#6DB0E6;
+    color:#EDB510;
 }
 .calendar-selection {
     color: #fff;
@@ -135,7 +139,7 @@ a,a:hover,.main-text,
   color: #666666;
 }
 .date-picker-header{
-  background-color: #355E9F;
+  background-color: #DFA808;
 }
 .calendar-back {
   background-image: url('/assets/guestweb/common_images/back_icon.png');
@@ -169,5 +173,5 @@ a,a:hover,.main-text,
     }
 }
 .res-details-heading, .res-details-heading:hover {
-    color: #6DB0E6;
+    color: #EDB510;
 }
