--- a/rover/partials/rateManager_/leftSideFilterSection/rvRateManagerFilterSection.html
+++ b/rover/partials/rateManager_/leftSideFilterSection/rvRateManagerFilterSection.html
@@ -92,7 +92,7 @@
 					<div class="entry"  ng-class="{'hidden': chosenTab !== 'RATE_TYPES'}">
 						<label for="rate-type">Filter Individual Rate Type(s)</label>
 						<div class="select">
-							<select id="rate-type" name="rate-type" ng-change="rateTypeSelected()" ng-model="selectedRateTypeID" iscroll-stop-propagation>
+							<select id="rate-type" name="rate-type" ng-change="rateTypeSelectedFromRTT()" ng-model="selectedRateTypeIDFromRTT" iscroll-stop-propagation>
 								<option class="placeholder" value="">Rate Type(s)</option>
 								<option ng-repeat="rateType in rateTypes" value="{{rateType.id}}">
 									{{rateType.name}}
@@ -142,15 +142,15 @@
 					<!-- Rate Types
 					Show when filter 'Rate Types' is active -->
 					<div class="selected-data" ng-class="{'hidden': chosenTab !== 'RATE_TYPES'}">
-						<strong ng-show="selectedRateTypes.length > 0">Rate Types Selected</strong>
+						<strong ng-show="selectedRateTypesFromRTT.length > 0">Rate Types Selected</strong>
 
-						<div class="rates-box" ng-repeat="rateType in selectedRateTypes">
+						<div class="rates-box" ng-repeat="rateType in selectedRateTypesFromRTT">
 							<span class="rate-data">{{rateType.name}}</span>
-							<span ng-click="deleteSelectedRateType(rateType.id)" class="icons delete_small"> &nbsp;</span>
+							<span ng-click="deleteSelectedRateTypeFromRTT(rateType.id)" class="icons delete_small"> &nbsp;</span>
 							<br clear="all">
 						</div>
 
-						<button ng-show="selectedRateTypes.length > 2" ng-click="deleteAllSelectedRateTypes()" class="button blank deleteall">Clear Selection</button>
+						<button ng-show="selectedRateTypesFromRTT.length > 2" ng-click="deleteAllSelectedRateTypesFromRTT()" class="button blank deleteall">Clear Selection</button>
 					</div>
 
 				</div> 
