CICO-39887, fixes code review items and issue with keyboard on nationality selection page

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -120,7 +120,7 @@ select {
 
     &.select-with-button {
         width: 84.1%;
-        margin-right: 0%;
+        margin-right: 3px;
     }
 
     &.with-label {
