--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -219,6 +219,12 @@
                     .size(70px, 2px);
                 }
             }
+            &.break.single-line{
+                &:before {
+                    .size(230px, 2px);
+                }
+            }
+          }     
         }
 
         &.large-icons {
