--- a/rover/partials/groups/rvGroupBillingInfoDeleteConfirmPopup.html
+++ b/rover/partials/groups/rvGroupBillingInfoDeleteConfirmPopup.html
@@ -6,6 +6,6 @@
         <span class="h2 message" translate>Remove Billing instructions from the group and all associated reservations</span>
 
         <button type="button" class="button green modal-close" ng-click="deleteGroupBillingInfo()">Proceed</button>
-        <button type="button" class="button blank modal-close" ng-click="closeDialog()">Close</button>
+        <button type="button" class="button blank modal-close" ng-click="closeDialog()">Cancel</button>
     </div>
 </div>
