--- a/admin/partials/ZDirectSetup/adZDirectSetup.html
+++ b/admin/partials/ZDirectSetup/adZDirectSetup.html
@@ -26,7 +26,7 @@
                     styleclass="full-width"></ad-textbox>
         <ad-textbox inputtype="text"
                     value="config.end_point"
-                    label="{{'ZDIRECT_ACCESS_URL_LABEL'| translate}}"
+                    label="{{'URL_LABEL'| translate}}"
                     styleclass="full-width"></ad-textbox>
     </fieldset>
 
