--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -771,7 +771,11 @@
                     cursor: default;
                     #calc > #width > .remove(100%, 150px);
                     #flexbox > .parent('', flex-start, '', '');
+                    &.passport-details{
+                        width:100% !important;
+                    }
                 }
+
 
                 .button {
                     font-size: 20px;
@@ -2037,3 +2041,10 @@
     margin-bottom:50px;
 }
 
+.passport-scan-status{
+    position: absolute;
+    right: 20px;
+    &.button-margin{
+        right: 165px;    
+    }
+}
