CICO-38996: Fix in rate manager top bar

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -66,12 +66,12 @@
                 Show Contract Details
              </label>  
         </li>
-        <li>
+        <li ng-hide="isRateTypeView">
             <button class="button rm-buttonOpenClose green" ng-click="openAll()">
                 Open All
             </button>  
         </li>
-        <li>
+        <li ng-hide="isRateTypeView">
             <button class="button  rm-buttonOpenClose red" ng-click ="closeAll()">
                 Close All
             </button>
