--- a/rover/partials/bill/rvBillingInformationPopup.html
+++ b/rover/partials/bill/rvBillingInformationPopup.html
@@ -12,8 +12,8 @@
          <em ng-if = "billingEntity == 'ALLOTMENT_DEFAULT_BILLING'">{{attachedEntities.allotment_details.name}}</em>
 
          <button type="button" id="new-route" class="button" ng-class = "{'green': isInitialPage, 'white':!isInitialPage}" ng-click="headerButtonClicked()" ng-hide="billingEntity ==='ALLOTMENT_DEFAULT_BILLING' || billingEntity === 'TRAVEL_AGENT_DEFAULT_BILLING' || billingEntity === 'COMPANY_CARD_DEFAULT_BILLING' || billingEntity === 'GROUP_DEFAULT_BILLING'">{{getHeaderButtonLabel()}}</button>
-         <button type="button" class="button red" ng-click="deleteBillingInfo()" ng-show="billingEntity === 'TRAVEL_AGENT_DEFAULT_BILLING' || billingEntity === 'COMPANY_CARD_DEFAULT_BILLING'" translate>DELETE</button>
-         <button type="button" class="button red" ng-click="showGroupBillingInfoDeleteConfirmPopup()" ng-if="billingEntity === 'GROUP_DEFAULT_BILLING'" translate>DELETE</button>
+         <button type="button" class="button red" ng-click="deleteBillingInfo()" ng-if="billingEntity === 'TRAVEL_AGENT_DEFAULT_BILLING' || billingEntity === 'COMPANY_CARD_DEFAULT_BILLING'" translate>DELETE</button>
+         <button type="button" class="button red" ng-click="showGroupBillingInfoDeleteConfirmPopup()" ng-if="isDeleteBtnShownForGroupBillingInfo()" translate>DELETE</button>
       </div>
 
       <div ng-include="'/assets/partials/common/notification_message.html'"></div>
