--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -759,6 +759,20 @@
                 justify-content: space-between; 
                 margin-top: 20px;
             }
+            .price .amount{
+                width:100%;
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: flex;
+                -webkit-flex-flow: row;
+                flex-flow: row;
+                -webkit-align-items: center;
+                align-items: center;
+                small{
+                    color: rgba(42,39,39,.6);
+                    margin-left: 10px;
+                }
+            }
         }
     }
 
