CICO-33247 ID scanning staff verify flow started

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -773,6 +773,7 @@
                     #flexbox > .parent('', flex-start, '', '');
                     &.passport-details{
                         width:100% !important;
+                        font-size: 34px !important;
                     }
                 }
 
