CICO-38761 disabling add-on QTy

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -717,6 +717,9 @@
                         .button {
                             padding: 0;
                         }
+                        .button.disabled{
+                            background: #e5e5e5 !important
+                        }
                     }
 
                     input,
