CICO-38993: Add file format with schedule params

--- a/rover/partials/reports/scheduleReport/rvScheduleReport.html
+++ b/rover/partials/reports/scheduleReport/rvScheduleReport.html
@@ -97,6 +97,16 @@
                     </select>
                 </div>
             </div>
+            <div class="entry">
+                <label for="time-period">FILE FORMAT</label>
+                <div class="select">
+                    <select ng-model="scheduleParams.schedule_format"
+                        ng-options="format.id as format.description for format in schedule_formats"
+                        iscroll-stop-propagation>
+                        <option value="">File Format</option>
+                    </select>
+                </div>
+            </div>
         </div>
     </div>
 
