--- a/rover/partials/reports/scheduleReport/rvScheduleReport.html
+++ b/rover/partials/reports/scheduleReport/rvScheduleReport.html
@@ -100,10 +100,8 @@
             <div class="entry">
                 <label for="time-period">FILE FORMAT</label>
                 <div class="select">
-                    <select iscroll-stop-propagation  ng-model="scheduleParams.format_id">
-
-                        <option value="" >File Format</option>
-                        <option value="{{format.id}}" ng-selected="{{format.id === scheduleParams.format_id}}" ng-repeat="format in schedule_formats">{{format.value}}</option>
+                    <select iscroll-stop-propagation  ng-model="scheduleParams.format_id" ng-options="format.id as format.value for format in schedule_formats">
+                       <option value="" >File Format</option>
                     </select>
                 </div>
             </div>
